--- a/frontend/amp_detail.html
+++ b/frontend/amp_detail.html
@@ -100,13 +100,13 @@
 								<tr><td><h4 class="midi_capable"></h4></td></tr>
 								<tr><td><h4 class="has_clean"></h4></td></tr>
 								<tr><td><h4 class="sounds_like_players"></h4></td></tr>
-								<tr><td><h4 class="percussive"></h4></td></tr>
+								<!-- <tr><td><h4 class="percussive"></h4></td></tr> -->
 								<tr><td><h4 class="percussive_level_amount"></h4></td></tr>
 								<tr><td><h4 class="feel_overall"></h4></td></tr>
-								<tr><td><h4 class="feel_low_end"></h4></td></tr>
-								<tr><td><h4 class="feel_high_end"></h4></td></tr>
+								<!-- <tr><td><h4 class="feel_low_end"></h4></td></tr> -->
+								<!-- <tr><td><h4 class="feel_high_end"></h4></td></tr> -->
 								<tr><td><h4 class="feel_rating"></h4></td></tr>
-								<tr><td><h4 class="compression_level"></h4></td></tr>
+								<!-- <tr><td><h4 class="compression_level"></h4></td></tr> -->
 								<tr><td><h4 class="compression_level_amount"></h4></td></tr>
 								<tr><td><h4 class="dynamic_feel_punch_vs_compression"></h4></td></tr>
 								<tr><td><h4 class="easy_to_play"></h4></td></tr>
