more style changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="style.css"/>
 		<script src="./index-front.js"></script>
+		<link rel="icon" type="image/png" href="assets/speaker-2.png">
+
 		<style>
 		@import url(http://fonts.googleapis.com/css?family=Rock+Salt);
 		@import url(http://fonts.googleapis.com/css?family=Covered+By+Your+Grace);
