more image changes

--- a/frontend/amp-edit.html
+++ b/frontend/amp-edit.html
@@ -19,7 +19,7 @@
 		<div class="row header navbar-fixed-top">
 
             <div class="ampButtonDiv col-xs-3">
-				<div id="ampHomeButton"><img class="ampSubmitLogo" src="./assets/amp.jpg"/><h2>View All Amps</h2></div>
+				<div id="ampHomeButton"><img class="ampSubmitLogo" src="./assets/speaker-2.png"/><h2>View All Amps</h2></div>
 			</div>
 
             <div class="titleDiv col-xs-6">
