--- a/frontend/amp_detail.html
+++ b/frontend/amp_detail.html
@@ -70,13 +70,13 @@
 			<div class="header navbar-fixed-top">
 				<div class="row">
 					<div class="NavButtonDiv col-xs-3">
-						<div id="homeAmpButton"><img class="ampSubmitLogo" src="./assets/amp.jpg"/ title="home"><h2>View All Amps</h2></div>
+						<div id="homeAmpButton"><img class="ampSubmitLogo" src="./assets/speaker-2.png"/ title="home"><h2>View All Amps</h2></div>
 					</div>
 					<div class="titleDiv col-xs-6">
 						<h1>AMP DETAIL</h1>
 					</div>
 					<div class="ampButtonDiv col-xs-3">
-						<div id="homeAddAmp"><img class="ampSubmitLogo" src="./assets/amp2.jpg" title="Add an Amp"/><h2>Add an Amp</h2></div>
+						<div id="homeAddAmp"><img class="ampSubmitLogo" src="./assets/speaker-1.png" title="Add an Amp"/><h2>Add an Amp</h2></div>
 					</div>
 				</div>
 			</div>
