--- a/frontend/amp.html
+++ b/frontend/amp.html
@@ -19,7 +19,7 @@
 <body>
 		<div class="row header navbar-fixed-top">
 			<div class="ampButtonDiv col-xs-3">
-				<div id="ampHomeButton"><img class="ampSubmitLogo" src="./assets/amp.jpg"/></div>
+				<div id="ampHomeButton"><img class="ampSubmitLogo" src="./assets/speaker-2.png"/></div>
 			</div>
 			<div class="titleDiv col-xs-6">
 				<h1>ADD AN AMP</h1>
