--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="style.css"/>
 		<script src="./index-front.js"></script>
-		<link rel="icon" type="image/png" href="assets/speaker-2.png">
+		<link rel="icon" type="image/png" href="assets/speaker-1.png">
 
 		<style>
 		@import url(http://fonts.googleapis.com/css?family=Rock+Salt);
@@ -23,7 +23,7 @@
 			<div class="header navbar-fixed-top">
 				<div class="row">
 					<div class="NavButtonDiv col-xs-3">
-						<div id="homeAmpButton"><img class="ampSubmitLogo" src="./assets/amp.jpg"/ title="home"><h2>View All Amps</h2></div>
+						<div id="homeAmpButton"><img class="ampSubmitLogo" src="./assets/speaker-2.png"/ title="home"><h2>View All Amps</h2></div>
 					</div>
 					<div class="titleDiv col-xs-6">
 						<h1>FIND MY SOUND</h1>
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 					<div class="ampButtonDiv col-xs-3">
-						<div id="homeAddAmp"><img class="ampSubmitLogo" src="./assets/amp2.jpg" title="Add an Amp"/><h2>Add an Amp</h2></div>
+						<div id="homeAddAmp"><img class="ampSubmitLogo" src="./assets/speaker-1.png" title="Add an Amp"/><h2>Add an Amp</h2></div>
 					</div>
 				</div>
 			</div>
